cmake_minimum_required(VERSION 3.24)
project(XCamp)

set(CMAKE_CXX_STANDARD 14)

add_executable(XCamp main.cpp Week1/week1a_WelcomeToXJOI.cpp Week1/week1b_CollectingInputs.cpp Week1/week1d_TowerOfHanoi.cpp Week1/week1c_TriangleOfNumbers.cpp Week1/week1e_MergeSort.cpp Week2/week2a_FloodFill.cpp Week2/week2b_RedAndBlack.cpp Week2/week2c_MazeVisitOrder.cpp Week3/week3a_CheckTheMaze.cpp Week3/week3b_ShortestPath.cpp Week3/week3c_NumberOfPaths.cpp)
